--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,10 +2,36 @@
   <!--  -->
   <%- include('partials/nav')%>
     <!--  -->
-    <div class="w-[100%] mx-auto p-10 bg-zinc-700 rounded text-center">
-      <h1 class=" mb-10 text-white text-5xl font-bold text-center">This is About Page</h1>
-      <p class="text-white text-center text-2xl font-thin py-3 leading-10 mb-10">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae, a magni delectus voluptatum fugiat deleniti quos exercitationem architecto quae iure, eos perspiciatis ipsum pariatur magnam. Dolorem culpa illo nam eaque deserunt ab sit, modi expedita pariatur obcaecati accusamus nobis minus dolores ad quo cum quibusdam animi, facilis sequi sint alias quasi molestias! Est quos eum deserunt soluta quas nam, ad animi id neque veritatis eius et facere repudiandae mollitia aperiam culpa labore quo alias dicta totam consectetur fugiat, vero maxime!</p>
-      <a class="bg-red-300 px-5 py-2 text-white rounded " href="/login">Start Your Journey</a>
+    <div class="w-[100%] h-[90vh] mx-auto p-10 ">
+      <div class="flex justify-evenly	mx-30  my-4 overflow-hidden	">
+        <h1 class=" mt-5 text-black text-7xl  font-black tracking-tighter hover:translate-x-12	transition-all duration-500 ease-out skew-y-3 	 " style="  font-family:Fjalla One, sans-serif  " >I REALLY <br> LOVE TO <br> TALK  WITH <br> PEOPLE
+        </h1>
+        <img class=" h-[45vh] shadow-xl shadow-black overflow-hidden	 hover:scale-90 duration-300 transition-all ease-linear " src="https://images.unsplash.com/photo-1501196354995-cbb51c65aaea?q=80&w=2942&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
+      </div>
+      <div class="flex justify-evenly gap-20  mt-6">
+        <div class="w-[28%] h-[33vh] leading-10 ">
+          <h1 class=" text-black text-1xl font-medium	pt-1  mt-20 ">Follow US</h1>
+          <hr class="w-[60%] border-black">
+
+          <p class="text-black text-1xl  font-normal	pt-1">Instagram<span class="text-2xl font-black px-20"> ←</span></p>
+          <hr class="w-[60%] border-black">
+
+          <p class="text-black text-1xl  font-normal	pt-1">Youtube<span class=" text-2xl font-black px-24"> ←</span></p>
+          <hr class="w-[60%] border-black">
+        </div>
+
+        <div class="w-[28%]  h-[33vh]">
+          <p><span class="text-black text-4xl font-bold">W</span>orem ipsum dolor sit amet consectetur adipisicing elit. Maiores id accusamus neque incidunt est repellendus, enim ipsam repellat nam blanditiis tempora quam ut tempore nesciunt sit dolorum! Esse  <br><br> Blanditiis eveniet explicabo dolorum illo rem aliquid cumque fuga possimus deserunt. Ab illo reiciendis cumque ipsum molestiae nesciunt quis magni consectetur ipsam, quod eveniet animi tempore.
+
+        </div>
+
+        <div class=" w-[28%]  h-[33vh]">
+         <p class="text-black text-1xl font-semibold	pt-5 px-4">" Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique in quis vel obcaecati reiciendis itaque doloremque, maiores fugit corrupti, explicabo quidem labore odio libero provident ab, error eveniet quae dicta possimus aliquam animi. Commodi, debitis! "</p>
+        </div>
+
+      </div>
+      <!-----------------------------  -->
     </div>
+  
     <!--  -->
     <%- include('partials/footer')%>
