--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,9 @@
     </title>
     <link
     href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
+    rel="stylesheet"/>
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
