--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,7 +2,7 @@
   <!--  -->
   <%- include('partials/nav')%>
     <!--  -->
-    <div class="w-[100%] h-[87vh] mx-auto p-10 bg-yellow-500 ">
+    <div class="w-[100%] h-[90vh] mx-auto p-10 bg-yellow-500 ">
       <!-- <h1 class=" mb-10 text-lime-300 text-6xl font-bold text-center">Login User</h1>
       <form class="text-center" action="/user/login" method="post">
         <input class=" w-[50%] py-3 my-5" type="text" name="username" placeholder="Username">
@@ -27,8 +27,8 @@
           <input class="w-[70%] py-3 px-5 " type="password" name="password" placeholder="Password">
           <hr class="w-[70%] border-black pt-2">
           <br>
-          <p class="text-xl font-medium mb-7"><a class="text-blue-500" style="  font-family: Caveat, cursive;" href="/forget">Forget Password ?</a></p>
-          <button class="bg-yellow-400 text-black px-14 py-2 font-semibold rounded-3xl text-l" >Login User</button>
+          <p class="text-xl font-medium mb-7"><a class="text-blue-500" style="  font-family: Caveat, cursive;" href="/forget-email">Forget Password ?</a></p>
+          <button class="bg-yellow-400 text-black px-14 py-2 font-semibold rounded-3xl text-l"  style="font-family: Caveat, cursive;">Login User</button>
           <br><br>
         <p class="text-xl font-semibold text-red-600" style="font-family: Caveat, cursive;">Don't have an account ? <a class=" text-black" href=" /register">Register</a></p>
         </form>
